# ezpz

./: .gitignore  CMakeLists.txt  LICENSE  README.md  init_build.sh  parser.cpp  reference.md
.github/workflows/: test.yml
examples/: arith_expr_repl.cpp  cli.cpp  expr_v1.cpp  graph.cpp  json.cpp  lexical.cpp  tutorial.cpp  xml.cpp
include/ezpz/: consumer.hpp  context.hpp  core.hpp  ezpz.hpp  helper.hpp  macros.hpp  matcher.hpp  meta.hpp  parse_object.hpp  quantifiers.hpp
include/ezpz/extra/: cin_context.hpp  graph_context.hpp
src/: consumer.hpp  context.cpp  context.hpp  ezpz.hpp  helper.cpp  helper.hpp  matcher.cpp  matcher.hpp  meta.hpp  parse_object.cpp  parse_object.hpp  parser.cpp  print_helper.hpp  quantifiers.cpp  quantifiers.hpp  r_parser.hpp  redone.cpp  test.cpp  unparser.hpp
src/examples/: arith_expr_repl.cpp  xml.cpp
test/: consumer.cpp  context.cpp  core.cpp  helper.cpp  matcher.cpp  props.cpp  quantifiers.cpp  test.cpp
test/extra/: cin_context.cpp
